...
    }
    if (replying != null) {
        ModalBottomSheet(
            onDismissRequest = { replyOwner = null },
            sheetState = rememberModalBottomSheetState(skipPartiallyExpanded = true),
        ) {
            Column(Modifier.testTag("waiting-reply-content").verticalScroll(rememberScrollState()).padding(bottom = 24.dp)) {
                Row(
                    Modifier.fillMaxWidth().padding(start = 24.dp, end = 24.dp, top = 4.dp, bottom = 20.dp)
                        .testTag("waiting-reply-header"),
                    verticalAlignment = Alignment.CenterVertically,
                    horizontalArrangement = Arrangement.spacedBy(16.dp),
                ) {
                    val invite = replying.invite
                    ContactAvatar(
                        address = invite.callerLogin?.takeIf { it.isNotBlank() }
...
